# timer-res-cpp

./: .gitignore  CMakeLists.txt  README.md  build.cmd
.github/workflows/: build.yml
apps/timer-res/: CMakeLists.txt  gui_main.cpp  resource.h  timer-res.rc
apps/timer-res-test-tool/: CMakeLists.txt  cli_main.cpp
libs/timer-res-core/: CMakeLists.txt  autostart.cpp  autostart.h  timer_backend.cpp  timer_backend.h
